src/styles/main.css
/* ... */
.body-styles {
  @apply m-0 flex flex-col min-h-[100vh] bg-black overflow-x-hidden;
}
.main-styles {
  @apply ml-20;
}

.auth-main {
  height: max-content;
}

.auth-box {
  position: absolute;
  top: 50px;
  left: 50%;
  transform: translateX(-50%);
}

.two-column-layout {
  @apply grid  grid-cols-2  items-center justify-center;
}

.h1-styles {
  color: var(--secondary-color);
  font-size: var(--H1-Mobile-font-size);
  @apply font-custom md:text-3xl;
}

.body-text-styles {
  color: var(--secondary-color);
  font-size: var(--Body-text-mobile-font-size);
  @apply font-custom2 md:text-lg;
}

.body-text-desktop {
  color: var(--secondary-color);
  font-size: var(--Body-text-desktop-font-size);
  @apply font-custom2;
}

.body-text-mobile {
  color: var(--secondary-color);
  font-size: var(--Body-text-mobile-font-size);
  @apply font-custom2;
}

.labels {
  color: var(--secondary-color);
  font-size: var(--Labels-mobile-font-size);
  @apply font-custom md:text-base;
}

.h2-styles {
  color: var(--secondary-color);
  font-size: var(--H2-Mobile-font-size);
  @apply font-custom md:text-[25px];
}
.button-styles {
  font-size: var(--Button-and-Input-mobile-font-size);
  @apply bg-primary font-extrabold text-tertiary font-custom2 rounded-lg hover:shadow-custom active:shadow-custom2  md:text-sm;
  padding: 10px 25px;
}

.close-button-auth {
  @apply -ml-6 px-3 py-1 md:px-2 md:py-1 mt-2 mb-2;
}
.gold-labels {
  font-size: var(--Labels-mobile-font-size);
  @apply text-[var(--primary-color)] font-custom1 md:text-base;
}

.search-bar-layout {
  @apply flex flex-row items-center justify-end  gap-2;
}

.desktop-select {
  @apply flex flex-row  gap-4;
}

.Categories {
  @apply pb-4;
}

.mobile-select {
  visibility: hidden;
  @apply p-0;
}

.search-input {
  @apply border-2 border-[var(--primary-color)] rounded-lg text-[var(--primary-color)];

  &:hover {
    @apply border-2 border-[var(--primary-color)] bg-black shadow-custom;
  }
  &:active {
    @apply border-2 border-[var(--primary-color)] bg-black shadow-custom;
  }
  &:focus {
    @apply border-2 border-[var(--primary-color)] bg-black shadow-custom;
  }
  &:focus-within {
    @apply border-2 border-[var(--primary-color)] bg-black shadow-custom;
  }
}

.flex-row-center {
  @apply flex flex-row items-center justify-center w-full;
}

.flex-col-center-layout {
  @apply flex flex-col items-center justify-center w-full;
}
.loading-symbol {
  @apply fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-xl text-black;
}

.logo {
  @apply rounded-full border-2 border-[var(--primary-color)];
}

@layer utilities {
  .z-12 {
    z-index: 12;
  }
}

.header-styles {
  @apply w-full flex flex-col h-56 fixed bg-black z-10 border-2 border-[var(--primary-color)];
}

.header-styles-other-pages {
  @apply w-full flex flex-col h-24 fixed bg-black z-10 border-2 border-[var(--primary-color)];
}

.sidebar-styles {
  @apply flex flex-row items-center z-12 justify-center bg-black gap-4 mt-[2px];
}
.hamburger {
  display: none;
}

.nav-menu {
  @apply flex flex-row gap-4;
}

.sidebar-height-when-closed {
  @apply max-h-[100px] top-0 bottom-0 pt-0;
  overflow-y: visible;
}

.sidebar-height-when-open {
  @apply h-80 w-auto top-0 bottom-0 pt-0 overflow-y-scroll;
}

.search-category-box {
  @apply flex flex-col items-center w-[100%] h-auto gap-0;
}

.desktop-category-div {
  @apply flex flex-row;
}

.nav-styles {
  @apply flex flex-row;
}

.nav-styles-hover {
  @apply flex flex-row;
}
.sidebar-li-layout {
  @apply flex flex-row;
}

.span-text-hover {
  @apply flex flex-row text-[var(--secondary-color)];
}

.outer-container {
  @apply flex flex-col w-[100%] items-center justify-center mt-[20px] md:grid md:grid-cols-2 xl:grid-cols-3 lg:gap-4 gap-y-4 md:gap-y-4;
}

.link-flex {
  @apply flex flex-row items-center justify-center;
}

.listing-container-styles {
  @apply flex flex-col items-center w-[380px] h-[420px] md:h-[650px] pr-4 pl-4 justify-center gap-2  border-2 border-[var(--primary-color)] rounded-lg;
}

.listing-header {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  height: 60px;
  max-width: 100%;
}

.h1-home-box {
  @apply mt-[250px] mb-8;
}

.listing-container-my-bids {
  @apply flex flex-col md:flex-row items-center w-[300px] h-[400px] md:w-[380px] md:h-[400px]  justify-center gap-2  border-2 border-[var(--primary-color)] rounded-lg;
}

.inner-container-styles {
  @apply flex flex-row  items-center justify-center  rounded-lg;
}

.listing-image-styles {
  @apply w-[20rem]  rounded-lg;
  object-fit: cover;
}

.seller-avatar-img {
  @apply w-[3rem] h-[3rem] rounded-full border-2 border-[var(--primary-color)] flex-shrink-0;
}

.carousel {
  @apply flex justify-between items-center overflow-hidden relative w-full;
  position: relative;
}

.carouselInner {
  @apply flex flex-row transition-transform duration-300 ease-in-out;
}

.imageContainer {
  @apply flex  items-center relative w-[15rem] md:w-[300px] md:h-[max-content] rounded-lg border-2 border-[var(--primary-color)];
}

.imageContainer img {
  @apply w-[20rem] h-[15rem] rounded-lg;
  object-fit: cover;
}

.imageContainerMyBids {
  @apply flex items-center relative overflow-x-hidden w-[10rem] md:w-[15rem] rounded-lg border-2 border-[var(--primary-color)];
}
.carousel-container {
  @apply flex justify-between items-center relative;
}
@layer utilities {
  .z-12 {
    z-index: 12;
  }
  .font-custom1 {
    font-family: var(--Font-1);
  }
}
.carousel-control-left {
  @apply absolute left-[-2px] top-[50%] transform -translate-y-1/2   z-20;
}

.carousel-control-left img {
  @apply w-[82px] h-[82px];
}
.carousel-control-right {
  @apply absolute right-[-2px] top-[50%] transform -translate-y-1/2   z-20;
  z-index: 1000;
}

.carousel-control-right img {
  @apply w-[82px] h-[82px];
}

.form-title-styles {
  @apply bg-[var(--primary-color)] shadow-lg shadow-white text-center;
}
/* ... */

